@@ -77,6 +77,8 @@ Post-v2.17.0
    - Linux datapath:
      * Add offloading meter tc police.
      * Add support for offloading the check_pkt_len action.
+   - New configuration knob 'other_config:all-members-active' for
+     balance-slb bonds.
    - Previously deprecated Linux kernel module is now fully removed from
      the OVS source tree.  The version provided with the Linux kernel
      should be used instead.
